Fixed a tag buttons spacing.

--- a/src/styles/blocks/_cards.scss
+++ b/src/styles/blocks/_cards.scss
@@ -45,7 +45,7 @@
   display: flex;
   padding: 1rem;
 
-  button {
+  button, a {
     margin: 0 .25rem;
   }
 }
