--- a/src/styles/blocks/_progress-bar.scss
+++ b/src/styles/blocks/_progress-bar.scss
@@ -6,7 +6,7 @@
 }
 
 .vz-progress-bar--loading {
-  transition: width .5s ease-out, height .25s ease-in 1s;
+  transition: width .5s ease-out, height .25s ease-in;
 }
 
 .vz-progress-bar--download {
